Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138349

QmlPreview does not start with import QtQuick.Controls + Style=Basic

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.5, 6.9.2, 6.9, 6.10.0 Beta3, 6.11.0 FF
    • 6.8.4, 6.9.1, 6.9.2, 6.10.0
    • QML: Tooling
    • None
    • Windows, but guess on other OS as well
    • 64cd070c8 (dev), fd850bc9d (6.10), f7477f53b (6.9), 705cc535c (tqtc/lts-6.8)

      Qt 6.8.2 preview works as expected
      Qt 6.8.3 preview starts, but no change is updated in the preview
      Qt 6.9.0 preview starts, but no change is updated in the preview
      Qt 6.9.1 preview only starts without "import QtQuick.Controls" + or removed qtquickcontrols2.conf (but if no controls, preview works as expected)
      Qt 6.10.0 preview only starts without "import QtQuick.Controls" + or removed qtquickcontrols2.conf (but if no controls, preview works as expected)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            tjenssen Tim Jenssen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: