QmlPreview: Drop existing CUs on main thread, not on debug server thread

Doing this on the debug server thread can cause deadlocks since we may
need to serve a file request stemming from type registrations that also
lock the QQmlMetaTypeData.

Amends commit 618720a3a9a7c3e292ed5fb6792ca4069c90f443.

Pick-to: 6.8
Fixes: QTBUG-138349
Change-Id: Iaa6c8cbf9270989aeca0cb84a4a77cd2aee36804
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 64cd070c8c4bee26c04bf48dcd99a29262a2fd6f)
(cherry picked from commit fd850bc9dea4ad8acb93cb014c4d14a988a1370f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>