tests/auto/qml/debugger/qqmlpreview/data/withQQC.qml
@@ -1,0 +1,10 @@
+import QtQuick
+
+// Trigger style selection
+import QtQuick.Controls
+
+Label {
+    height: 1000
+    width: 1000
+    Component.onCompleted: console.log("loaded")
+}
